--- a/wp-rest-api-react/src/index.css
+++ b/wp-rest-api-react/src/index.css
@@ -26,13 +26,13 @@
 html {
 	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
-	-ms-text-size-adjust:     100%;
+	-ms-text-size-adjust: 100%;
 	scroll-behavior: smooth;
 }
 
 body {
 	margin: 0;
-	
+
 }
 
 article,
@@ -266,7 +266,7 @@ h6 {
 	text-align: center;
 	padding: 0 1.25rem;
 	z-index: -6;
-	
+
 }
 
 p.site-title {
@@ -344,7 +344,8 @@ html {
 
 *,
 *:before,
-*:after { /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
+*:after {
+	/* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
 	box-sizing: inherit;
 }
 
@@ -361,7 +362,7 @@ q:after {
 
 blockquote,
 q {
-	quotes: "" "";
+	quotes: """";
 }
 
 hr {
@@ -377,8 +378,8 @@ ol {
 	padding: 0;
 }
 
-p + ul,
-p + ol {
+p+ul,
+p+ol {
 	margin: -1em 0 1.5em 3em;
 }
 
@@ -390,8 +391,8 @@ ol {
 	list-style: decimal;
 }
 
-li > ul,
-li > ol {
+li>ul,
+li>ol {
 	margin-bottom: 0;
 	margin-left: 1.5em;
 }
@@ -405,12 +406,15 @@ dd {
 }
 
 img {
-	height: auto; /* Make sure images are scaled correctly. */
-	max-width: 100%; /* Adhere to container width. */
+	height: auto;
+	/* Make sure images are scaled correctly. */
+	max-width: 100%;
+	/* Adhere to container width. */
 }
 
 figure {
-	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
+	margin: 1em 0;
+	/* Extra wide images within figure tags don't overflow the content area. */
 }
 
 table {
@@ -427,7 +431,7 @@ a {
 
 a:visited {
 	color: rgb(255, 255, 255);
-	
+
 }
 
 a:hover,
@@ -439,7 +443,8 @@ a:active {
 a:focus {
 	outline: thin dotted;
 }
-a{
+
+a {
 	color: white;
 }
 
@@ -458,7 +463,8 @@ a:active {
 	height: 1px;
 	width: 1px;
 	overflow: hidden;
-	word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
+	word-wrap: normal !important;
+	/* Many screen reader and browser combinations announce broken words as they would appear visually. */
 }
 
 .screen-reader-text:focus {
@@ -478,7 +484,8 @@ a:active {
 	text-decoration: none;
 	top: 5px;
 	width: auto;
-	z-index: 100000; /* Above WP toolbar. */
+	z-index: 100000;
+	/* Above WP toolbar. */
 }
 
 /* Do not show the outline on the skip link target. */
@@ -541,18 +548,18 @@ a:active {
 # Content
 --------------------------------------------------------------*/
 .loading {
-    display: block;
+	display: block;
 	margin: 0 auto;
 }
 
 #root {
 	/* background: #F5F4FB; */
-	
+
 }
 
 #main {
 	margin: 0 auto;
-    min-height: 18.75rem;
+	min-height: 18.75rem;
 
 }
 
@@ -606,15 +613,17 @@ footer p {
 .featured-image img {
 	display: block;
 	width: 50vw;
-	
+
 	object-fit: cover;
 	margin: 0 auto;
 }
-div.swiper-button-prev{
+
+div.swiper-button-prev {
 	left: 2rem;
 	color: #D4F290;
 }
-div.swiper-button-next{
+
+div.swiper-button-next {
 	right: 2rem;
 	color: #D4F290;
 
@@ -624,40 +633,47 @@ div.swiper-button-next{
 /* media Queries */
 
 @media (min-width:320px) and (max-width:665px) {
-	
-	.background-blue{
+
+	.background-blue {
 		min-height: 158.9vh;
 	}
-	.avatar{
+
+	.avatar {
 		display: none;
 	}
+
 	.background-blue {
-		
+
 		max-width: 100vw;
-		
+
 	}
+
 	h1.title-site {
 		font-size: 3rem;
 	}
-	div.hamburger{
-		
+
+	div.hamburger {
+
 		display: none;
-			position: relative;
-			left: -6rem;
-			top: -3rem;
-		
-	}
-	.hwNmdN{
-		left:169% ;
+		position: relative;
+		left: -6rem;
+		top: -3rem;
 
 	}
+
+	.hwNmdN {
+		left: 169%;
+
+	}
+
 	.projects img {
 		width: 19rem;
 	}
-	
-	.skill-card{
+
+	.skill-card {
 		flex-direction: column;
 	}
+
 	.Skills {
 		display: flex;
 		flex-direction: row;
@@ -677,6 +693,7 @@ div.swiper-button-next{
 		box-shadow: rgb(0 0 0 / 25%) 0px 14px 28px, rgb(0 0 0 / 22%) 0px 10px 10px;
 		border-radius: 50%;
 	}
+
 	.about-content p {
 		display: flex;
 		height: 10rem;
@@ -685,34 +702,39 @@ div.swiper-button-next{
 		/* margin: 0 auto; */
 		color: #38175C;
 	}
+
 	.headin p {
 		font-size: 1rem;
 		font-style: bold;
 		text-align: center;
 	}
-	.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+
+	.swiper-horizontal>.swiper-pagination-bullets,
+	.swiper-pagination-bullets.swiper-pagination-horizontal,
+	.swiper-pagination-custom,
+	.swiper-pagination-fraction {
 		bottom: 10px;
 		left: 0;
 		width: 100%;
 		display: none;
 	}
-	div.site-branding{
+
+	div.site-branding {
 		margin-left: 1rem;
 	}
-	p{
+
+	p {
 		padding: 1rem;
 	}
-	.featured-image img{
+
+	.featured-image img {
 		width: fit-content;
 	}
-	
-	
-	
+
+
+
 }
-.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal{
+
+.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal {
 	display: none;
 }
-
-
-
-
