--- a/wp-rest-api-react/src/logo.css
+++ b/wp-rest-api-react/src/logo.css
@@ -1,72 +1,67 @@
 @keyframes bounce {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(
-        var(--bounce-offset)
-      );
-    }
+  from {
+    transform: translateY(0px);
   }
 
-.logo{
-    display: flex;
-    color: blue;
-    text-decoration: none;
-    margin: 0 auto;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    justify-content: flex-start;
+  to {
+    transform: translateY(var(--bounce-offset));
+  }
 }
 
-a{
-    text-decoration: none;
-    
+.logo {
+  display: flex;
+  color: blue;
+  text-decoration: none;
+  margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  justify-content: flex-start;
+}
+
+a {
+  text-decoration: none;
+
 }
 
 @keyframes bounce {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(
-        var(--bounce-offset)
-      );
-    }
+  from {
+    transform: translateY(0px);
   }
 
-  .box {
-    position: relative;
-    height: 35px;
-    width: 35px;
-    background-color: #D0EE8C;
-    border-radius: 50%;
-    font-size: 1.5rem;
-    cursor: pointer;  
-
-    
-
-   
+  to {
+    transform: translateY(var(--bounce-offset));
   }
-  .box:hover{
-    animation:
-    bounce alternate infinite
-    cubic-bezier(.2, .65, .6, 1);
+}
+
+.box {
+  position: relative;
+  height: 35px;
+  width: 35px;
+  background-color: #D0EE8C;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  cursor: pointer;
+
+
+
+
+}
+
+.box:hover {
+  animation:
+    bounce alternate infinite cubic-bezier(.2, .65, .6, 1);
+}
+
+.box.one {
+  --bounce-offset: -10px;
+  animation-duration: 200ms;
+
+
+}
+
+@media (min-width:320px) and (max-width:665px) {
+  .logo {
+    justify-content: center;
   }
-  .box.one {
-    --bounce-offset: -10px;
-    animation-duration: 200ms;
-    
 
-  }
- 
-  @media (min-width:320px) and (max-width:665px) {
-    .logo{
-      justify-content: center;
-    }
-
-  }
-  
-
-
-
+}
