--- a/wp-rest-api-react/src/styles/footer.css
+++ b/wp-rest-api-react/src/styles/footer.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-.footer-section{
+.footer-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,27 +10,34 @@
     text-align: center;
 
 }
-.headin p{
-    font-size:2rem;
+
+.headin p {
+    font-size: 2rem;
 }
-.headin{
-    
-    
+
+.headin {
+
+
     padding: 1rem;
     border-bottom: 1px solid #D4F290;
     width: 50vw;
 
 }
-.icon{
+
+.icon {
     height: 2rem;
     width: 2rem;
     margin: 1rem;
-    
+
 }
 
-@media (min-width: 320px) and (max-width: 1000px){
-.headin p {
-    font-size: 1.5rem;
-    text-align: center;
+.mail-button a {
+    color: blue;
 }
+
+@media (min-width: 320px) and (max-width: 1000px) {
+    .headin p {
+        font-size: 1.5rem;
+        text-align: center;
+    }
 }
