--- a/wp-rest-api-react/src/styles/read.css
+++ b/wp-rest-api-react/src/styles/read.css
@@ -1,16 +1,17 @@
-.container{
-    position: absolute;
-    top: 10%;
-    left: 23%;
-    width: 50%;
-  }
-    
-  .text{
-    display: inline;
-    width: 100%;
-  }
-    
-  .read-or-hide{
-    color: rgb(75 255 5);
-    cursor: pointer;
-  }
+.container {
+  position: absolute;
+  top: 10%;
+  left: 23%;
+  width: 50%;
+}
+
+.text {
+  display: inline;
+  width: 100%;
+}
+
+.read-or-hide {
+  color: rgb(75 255 5);
+  cursor: pointer;
+  font-weight: bold;
+}
